# rust-pa

./: Cargo.toml
src/: ast.rs  main.rs  parse.rs  verify.rs
src/binary/: codes.rs  deserialize.rs  expr.rs  file.rs  hintcodes.rs  lowlevel.rs  mod.rs  opmap.rs
src/bkernel/: verify.rs
src/high_level/: ast.rs  guesswork.rs  mod.rs  parse.rs  semantics.rs  translate.rs  tree_matcher.rs  type_check.rs
src/kernel/: ast.rs  mod.rs  parse.rs  verify.rs
src/tactic/: common.rs  mod.rs
test/bad/: and_eliml_mismatch.pa  and_elimr_mismatch.pa  and_elimr_not_and.pa  def_not_iff.pa  def_not_pred.pa  def_not_var.pa  def_recursive.pa  def_twice.pa  def_two_symbols.pa  doublenot_elim_isnt.pa  eqintro_not_eq.pa  eqintro_sides_mismatch.pa  false_intro_not_contradiction.pa  lemma_abox_doublebind.pa  lemma_abox_doublebind_inner2.pa  lemma_badstep.pa  lemma_badstep_box.pa  lemma_badstep_future.pa  lemma_badstep_inside.pa  lemma_badstep_self.pa  lemma_bydef_doesnotexist.pa  lemma_bydef_wrong.pa  lemma_ebox_doublebind.pa  lemma_endswithwrongclaim.pa  lemma_lemma_doesnotsaythat.pa  not_intro_wrong_not.pa  or_elim_badhypr.pa  or_introl_mismatch.pa  or_introl_notor.pa  or_intror_notor.pa  stmt_double_bind.pa  stmt_double_bind2.pa  stmt_pred_wrong_arity.pa
test/good/: def_simple.pa  lemma_x_eq_x_plus_0.pa  zero_add.pa
test/kernel_bad/: and_eliml_not_and.pa  and_intro_bad_lhs.pa  and_intro_bad_rhs.pa  and_intro_isnt.pa  def_arg_swapped.pa  def_two_rules.pa  doublenot_elim_isnt2.pa  doublenot_elim_wrong.pa  eqelim_mismatch_bool.pa  eqelim_mismatch_nat.pa  eqelim_noteq.pa  (+18 more)
(+4 files in other folders)
