[package]
name = "rust-pa"
version = "0.1.0"
authors = ["Giles Edkins <edkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
log = "0.4.1"
nom = "5.1.0"
num-bigint = "0.2.5"
num-traits = "0.2.11"
stderrlog = "0.4.3"
